--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -70,19 +70,20 @@
   }
 }
 
-.jumbotron {
-  text-align: center;
-  background-image: asset-url('photo.jpeg');
-  background-size: cover;
-  color: #fff;
-  font-family: 'Helvetica Neue' !important;
-  font-stretch: expanded;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  margin-left: 15px;
-  margin-right: 15px;
-  text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
-
+.col-lg-12 {
+  .jumbotron {
+    text-align: center;
+    background-image: asset-url('photo.jpeg');
+    background-size: cover;
+    color: #fff;
+    font-family: 'Helvetica Neue' !important;
+    font-stretch: expanded;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+  }
 }
 
 .no-left-padding {
