--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -39,3 +39,12 @@
   </div>
 
 <% end %>
+
+<script type="text/javascript">
+  $("#image_picture").bind("change", () => {
+    var sizeInMegabytes = this.files[0].size/1024/1024;
+    if(sizeInMegabytes > 5){
+      alert("Maximum file size is 5MB");
+    }
+  });
+</script>
